--- a/report/RJ/figs/tabelaoRJ.tex
+++ b/report/RJ/figs/tabelaoRJ.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.1 by xtable 1.8-2 package
-% Mon Sep 19 10:16:00 2016
+% Tue Sep 20 20:49:24 2016
 \begin{longtable}{l|lllllll}
   \hline
 Municipio & Regional & Temperatura & Tweets & Casos & Incidencia & Rt & Nivel \\ 
@@ -9,97 +9,97 @@ Municipio & Regional & Temperatura & Tweets & Casos & Incidencia & Rt & Nivel \\
 {\footnotesize Continua na próxima página}
 \endfoot
 \endlastfoot
-Angra dos Reis & Litoral Sul &  &  & 9 & 5.4 & 0.8 & verde \\ 
-  Aperibé & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Araruama & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Areal & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Armação dos Búzios & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Arraial do Cabo & Baixada Litorânea & 21.7 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Barra do Piraí & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Barra Mansa & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Belford Roxo & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bom Jardim & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bom Jesus do Itabapoana & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cabo Frio & Baixada Litorânea & 21.7 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cachoeiras de Macacu & Serrana & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cambuci & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Campos dos Goytacazes & Norte & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cantagalo & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Carapebus & Norte &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cardoso Moreira & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Carmo & Serrana & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Casimiro de Abreu & Baixada Litorânea & 21.7 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Comendador Levy Gasparian & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Conceição de Macabu & Norte &  &  & 1 & 4.5 & 3.1 & verde \\ 
-  Cordeiro & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Duas Barras & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Duque de Caxias & Metropolitana I & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Engenheiro Paulo de Frontin & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Guapimirim & Serrana & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Iguaba Grande & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itaboraí & Metropolitana II & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itaguaí & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Italva & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itaocara & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itaperuna & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itatiaia & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Japeri & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Laje do Muriaé & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Macaé & Norte &  &  & 5 & 4.8 & 1.0 & verde \\ 
-  Macuco & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Magé & Metropolitana I & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Mangaratiba & Litoral Sul &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Maricá & Metropolitana II & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Mendes & Centro Sul &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Mesquita & Metropolitana I & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Miguel Pereira & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Miracema & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Natividade & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Nilópolis & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Niterói & Metropolitana II & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Nova Friburgo & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Nova Iguaçu & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Paracambi & Centro Sul &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Paraíba do Sul & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Paraty & Litoral Sul &  &  & 1 & 2.5 & 0.5 & verde \\ 
-  Paty do Alferes & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Petrópolis & Serrana & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Pinheiral & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Piraí & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Porciúncula & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Porto Real & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quatis & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Queimados & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quissamã & Norte & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Resende & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio Bonito & Metropolitana II &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio Claro & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio das Flores & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio das Ostras & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio de Janeiro & Metropolitana I &  &  & 25 & 1.1 & 0.7 & verde \\ 
-  Santa Maria Madalena & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Santo Antônio de Pádua & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São Fidélis & Norte & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São Francisco de Itabapoana & Norte & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São Gonçalo & Metropolitana II & 21.3 &  & 3 & 0.6 & 0.4 & verde \\ 
-  São João da Barra & Norte & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São João de Meriti & Metropolitana I & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São José de Ubá & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São José do Vale do Rio Preto & Serrana & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São Pedro da Aldeia & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  São Sebastião do Alto & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Sapucaia & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Saquarema & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Seropédica & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Silva Jardim & Metropolitana II &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Sumidouro & Serrana & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Tanguá & Metropolitana II & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Teresópolis & Serrana & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Trajano de Moraes & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Três Rios & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Valença & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Varre-Sai & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Vassouras & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Volta Redonda & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
+Angra dos Reis & Litoral Sul & 19.4 &  & 7 & 4.3 & 0.6 & verde \\ 
+  Aperibé & Noroeste & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Araruama & Baixada Litorânea & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Areal & Centro Sul & 21.1 &  & 5 & 67.3 & 12.1 & verde \\ 
+  Armação dos Búzios & Baixada Litorânea & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Arraial do Cabo & Baixada Litorânea & 22.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Barra do Piraí & Médio Paraíba & 19.4 &  & 49 & 104.6 & 1.4 & verde \\ 
+  Barra Mansa & Médio Paraíba & 19.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Belford Roxo & Metropolitana I & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Bom Jardim & Serrana & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Bom Jesus do Itabapoana & Noroeste & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cabo Frio & Baixada Litorânea & 22.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cachoeiras de Macacu & Serrana & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cambuci & Noroeste & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Campos dos Goytacazes & Norte & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cantagalo & Serrana & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Carapebus & Norte & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cardoso Moreira & Noroeste & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Carmo & Serrana & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Casimiro de Abreu & Baixada Litorânea & 22.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Comendador Levy Gasparian & Centro Sul & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Conceição de Macabu & Norte & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cordeiro & Serrana & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Duas Barras & Serrana & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Duque de Caxias & Metropolitana I & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Engenheiro Paulo de Frontin & Centro Sul & 21.1 &  & 6 & 73.7 & 12.1 & verde \\ 
+  Guapimirim & Serrana & 22.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Iguaba Grande & Baixada Litorânea & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Itaboraí & Metropolitana II & 22.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Itaguaí & Metropolitana I & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Italva & Noroeste & 21.9 &  & 2 & 20.7 & 3.1 & verde \\ 
+  Itaocara & Noroeste & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Itaperuna & Noroeste & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Itatiaia & Médio Paraíba & 19.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Japeri & Metropolitana I & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Laje do Muriaé & Noroeste & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Macaé & Norte & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Macuco & Serrana & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Magé & Metropolitana I & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Mangaratiba & Litoral Sul & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Maricá & Metropolitana II & 22.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Mendes & Centro Sul & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Mesquita & Metropolitana I & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Miguel Pereira & Centro Sul & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Miracema & Noroeste & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Natividade & Noroeste & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Nilópolis & Metropolitana I & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Niterói & Metropolitana II & 22.4 &  & 1 & 0.2 & 0.5 & verde \\ 
+  Nova Friburgo & Serrana & 21.1 &  & 5 & 4.3 & 0.2 & verde \\ 
+  Nova Iguaçu & Metropolitana I & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Paracambi & Centro Sul & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Paraíba do Sul & Centro Sul & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Paraty & Litoral Sul & 19.4 &  & 4 & 10.0 & 1.7 & verde \\ 
+  Paty do Alferes & Centro Sul & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Petrópolis & Serrana & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Pinheiral & Médio Paraíba & 19.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Piraí & Médio Paraíba & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Porciúncula & Noroeste & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Porto Real & Médio Paraíba & 19.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Quatis & Médio Paraíba & 19.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Queimados & Metropolitana I & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Quissamã & Norte & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Resende & Médio Paraíba & 19.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Rio Bonito & Metropolitana II & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Rio Claro & Médio Paraíba & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Rio das Flores & Médio Paraíba & 19.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Rio das Ostras & Baixada Litorânea & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Rio de Janeiro & Metropolitana I & 21.1 &  & 20 & 0.8 & 0.7 & verde \\ 
+  Santa Maria Madalena & Serrana & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Santo Antônio de Pádua & Noroeste & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São Fidélis & Norte & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São Francisco de Itabapoana & Norte & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São Gonçalo & Metropolitana II & 22.4 &  & 2 & 0.4 & 0.4 & verde \\ 
+  São João da Barra & Norte & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São João de Meriti & Metropolitana I & 22.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São José de Ubá & Noroeste & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São José do Vale do Rio Preto & Serrana & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São Pedro da Aldeia & Baixada Litorânea & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São Sebastião do Alto & Serrana & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Sapucaia & Centro Sul & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Saquarema & Baixada Litorânea & 21.1 &  & 9 & 13.6 & 1.3 & verde \\ 
+  Seropédica & Metropolitana I & 20.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Silva Jardim & Metropolitana II & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Sumidouro & Serrana & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Tanguá & Metropolitana II & 22.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Teresópolis & Serrana & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Trajano de Moraes & Serrana & 19.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Três Rios & Centro Sul & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Valença & Médio Paraíba & 19.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Varre-Sai & Noroeste & 21.9 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Vassouras & Centro Sul & 21.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Volta Redonda & Médio Paraíba & 19.4 &  & 0 & 0.0 & 0.0 & verde \\ 
   \hline
 \end{longtable}
