--- a/report/reportconfig/BoletimRio_InfoDengue.Rnw
+++ b/report/reportconfig/BoletimRio_InfoDengue.Rnw
@@ -3,43 +3,46 @@
 % Adapted by Claudia Codeco (Jun 2016)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[10pt]{article} % The default font size is 10pt; 11pt and 12pt are alternatives
+\documentclass[10pt]{article} 
+\usepackage[utf8]{inputenc}
+\SweaveOpts{keep.source=TRUE}
+\input{structure_infodengue.tex} 
 
-\input{../reportconfig/structure_infodengue.tex} % Include the document which specifies all packages and structural customizations for this template
-
-% Carregando dados  (atualmente é manual)
+<<options,echo=FALSE,results=hide>>=
+options(useFancyQuotes=FALSE)
+library('xtable')
+@
   
-  \fancyfoot[C]{Boletim Municipal - Rio de Janeiro}
-\fancyfoot[R]{SE 36 de 2016}
+\fancyfoot[C]{Boletim Municipal - Rio de Janeiro}
+\fancyfoot[R]{SE \Sexpr{env$se} de \Sexpr{env$ano}}
 \fancyfoot[L]{\href{http://info.dengue.mat.br}{InfoDengue}}
 
-\usepackage{Sweave}
 \begin{document}
-\input{BoletimRio-concordance}
+\SweaveOpts{concordance=TRUE}
 
-%---------------------------------------------------------------------------------
-  %	HEADER IMAGE
-%---------------------------------------------------------------------------------
+%--------------------------------------------------------------------------------
+%	HEADER IMAGE
+%--------------------------------------------------------------------------------
   
-  \begin{figure}[H]
-\centering\includegraphics[width=1\linewidth]{../reportconfig/InfoDengue2.png}  
+\begin{figure}[H]
+\centering\includegraphics[width=1\linewidth]{InfoDengue2.png}  
 \end{figure}
 
 \centerline {\color{altncolor}\rule{1\linewidth}{2.75pt}} % Horizontal line
 
-%---------------------------------------------------------------------------------
-  %	CAIXA LATERAL - PRIMEIRA PAGINA
+%--------------------------------------------------------------------------------
+%	CAIXA LATERAL - PRIMEIRA PAGINA
 %--------------------------------------------------------------------------------
   
-  \begin{minipage}[t]{.30\linewidth} % Mini page taking up 30% of the actual page
+\begin{minipage}[t]{.30\linewidth} % Mini page taking up 30% of the actual page
 \begin{mdframed}[style=sidebar,frametitle={}] % Sidebar box
 
 %-----------------------------------------------------------
-  \textbf{{\LARGE{Rio de Janeiro}}}
+\textbf{{\LARGE{Rio de Janeiro}}}
 
 \hypertarget{contents}{\textbf{{\large Boletim Semanal}}} 
 
-\textbf{Semana 36 de 2016} % se, ano, em pp.RData
+\textbf{Semana \Sexpr{(env$datarel)} de \Sexpr{env$ano}} % se, ano, em pp.RData
 
 \begin{itemize}
 \item \hyperlink{estado}{O Estado} 
@@ -73,13 +76,13 @@
 %-------------------------------------------------------------------------------
   \hypertarget{estado}{\heading{Situação da Dengue no Estado do Rio de Janeiro}{6pt}} % \hypertarget provides a label to reference using 
 
-Desde o início do ano, 102577 casos foram registrados no estado, sendo 44 na semana 36. A figura abaixo mostra as condições de transmissão em cada município.
+Desde o início do ano, \Sexpr{env$totanoUF} casos foram registrados no estado, sendo \Sexpr{env$totultseUF} na semana \Sexpr{env$seUF}. A figura abaixo mostra as condições de transmissão em cada município.
 
 % Mapa estadual
-\includegraphics[width=0.8\textwidth]{../RJ/figs/Mapa_ERJ.png}
+\includegraphics[width=0.8\textwidth]{\Sexpr{env$figmapaestado}}
 %-----------------------------------------------------------
   
-  Dos 92 municipios, 92 encontram-se em nivel verde, 0 em nivel amarelo, 0 em nivel laranja e 0 em nivel vermelho referentes a semana epidemiológica 36-2016. Para informações mais atualizadas
+  Dos \Sexpr{env$nmunicipios} municipios, \Sexpr{env$nverdeUF} encontram-se em nivel verde, \Sexpr{env$namareloUF} em nivel amarelo, \Sexpr{env$nlaranjaUF} em nivel laranja e \Sexpr{env$nvermelhoUF} em nivel vermelho referentes a semana epidemiológica \Sexpr{env$seUF}-\Sexpr{env$anoUF}. Para informações mais atualizadas
 sobre o município do Rio de Janeiro ter acesso ao mapa interativo do estado consultar em \href{http://info.dengue.mat.br}{\textit{Info Dengue}}.
 
 
@@ -99,7 +102,7 @@ As cores indicam niveis de atenção
 \end{description}
 \end{mdframed}
 
-\textbf{Na semana passada:} 0 municípios em nivel amarelo, 0 em laranja e 0 em vermelho.  
+\textbf{Na semana passada:} \Sexpr{env$namarelo1UF} municípios em nivel amarelo, \Sexpr{env$nlaranja1UF} em laranja e \Sexpr{env$nvermelho1UF} em vermelho.  
 
 \end{minipage} % End the main body - first page mini page
 
@@ -107,26 +110,69 @@ As cores indicam niveis de atenção
 %----------------------------------------------------------------------------------
   %	SEGUNDA PAGINA: TEXTO PRINCIPAL - REGIONAL
 %----------------------------------------------------------------------------------
-  
-\begin{minipage}[t]{.66\linewidth}\hypertarget{regional}{\heading{Situação da Dengue na Regional Metropolitana I}{6pt}}\includegraphics[\width=8\textwidth]{../RJ/figs/MapaRJ_MetropolitanaI.png}\captionof{table}[tabregional]{Resumo das últimas seis semanas epidemiológicas na Regional Metropolitana I }\begin{center}\input{../RJ/figs/tabregionalRJ_MetropolitanaI.tex}\end{center}\small{\hyperlink{vartab}{ver descrição das variáveis}}\begin{center}\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Metropolitana I }\includegraphics[width=1.3\textwidth]{../RJ/figs/tweetRJ_MetropolitanaI.png}\end{center}\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}\begin{mdframed}[style=sidebar,frametitle={}]\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Belford Roxo 
-\gsquare Itaguaí 
-\gsquare Magé 
-\gsquare Mesquita 
-\gsquare Queimados 
-\gsquare Rio de Janeiro 
-\gsquare São João de Meriti 
-\gsquare Nova Iguaçu 
-\gsquare Seropédica 
-\gsquare Duque de Caxias 
-\gsquare Japeri 
-\gsquare Nilópolis \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage  %-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE - PARTE PRINCIPAL - Municipio
+
+
+\begin{minipage}[t]{.66\linewidth}
+
+\hypertarget{regional}{\heading{Situação da Dengue na Regional Metropolitana I}{6pt}} % titulo
+
+% Mapa da regional
+\vspace{2cm}
+\captionof{figure}[tabregional]{Mapa de Alerta da Regional de Saúde}
+\begin{center}
+\includegraphics[width=0.7\textwidth]{\Sexpr{env$mapareg}} 
+\vspace{2cm}
+\end{center}
+
+% tabela da regional 
+\captionof{table}[tabregional]{Resumo das últimas seis semanas epidemiológicas na Regional de Saúde}
+\begin{center}
+\input{\Sexpr{env$tabreg}}
+\end{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}
+\vspace{0.5cm}
+
+\end{minipage}
+\begin{minipage}[t]{.30\linewidth}
+
+
+% --------------------------------------------------------------------------
+%       SEGUNDA PAGINA: CAIXA LATERAL - INDICE MUNICIPIOS
+% -------------------------------------------------------------------------
+
+\begin{mdframed}[style=sidebar,frametitle={}] % Sidebar box 
+\textbf{\hyperlink{municips}{Municípios}} % titulo
+% Mini page taking up 30% of the actual page
+\begin{itemize} 
+
+<<bulletsmunicip,echo=FALSE,results=tex>>=
+coresbullets = c(verde='\\gsquare',amarelo='\\ysquare',
+                 laranja='\\osquare',vermelho='\\rsquare')
+
+for (j in 1:env$nmunicipiosRS) {
+  nivel = env$tabelaoRS$Nivel[j]
+  corbullet = '\\wsquare'
+  if(!is.na(nivel)) corbullet = coresbullets[nivel] 
+  cat(paste(corbullet,env$tabelaoRS$Municipio[j],'\n'))
+}
+@
+\end{itemize}
+
+\BackToContents
+% fim do box e minipage
+\end{mdframed}
+\hfill
+\end{minipage} % End of the sidebar mini page
+\newpage
+
+  %-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE - PARTE PRINCIPAL - Municipio
 %-----------------------------------------------------------------------------------
 \begin{minipage}[t]{0.6\linewidth} % Mini page taking up 100% of the actual page
 \hypertarget{mun}{\heading{Situação da Dengue na Cidade do Rio de Janeiro: Mapa}{6pt}} % \hypertarget 
 
 %A figura abaixo mostra a série histórica do município: (TOPO) Série temporal de casos suspeitos de dengue e série temporal de dengue mencionada em rede social; (MEIO) Perfil da temperatura; (BAIXO) histórico do alerta. 
 
-\includegraphics[width=0.95\textwidth]{figs/mapaRio.png}
+\includegraphics[width=0.95\textwidth]{\Sexpr{env$nomemapario}}
 
 \small{Veja o mapa interativo em http://alerta.dengue.mat.br/rio}
 
@@ -134,7 +180,7 @@ As cores indicam niveis de atenção
 
 \captionof{table}{Resumo das últimas seis semanas epidemiológicas}
 \begin{center}
-\input{figs/tabelaRio.tex}
+\input{\Sexpr{env$tabelaRio}}
 \end{center}
 
 \BackToContents % Link back to the contents of the newsletter
@@ -148,17 +194,22 @@ As cores indicam niveis de atenção
   
   \textbf{Áreas Programáticas da Saúde} 
 
-\begin{itemize}\gsquare APS  1.0 
-\gsquare APS  2.1 
-\gsquare APS  2.2 
-\gsquare APS  3.1 
-\gsquare APS  3.2 
-\gsquare APS  3.3 
-\gsquare APS  4.0 
-\gsquare APS  5.1 
-\gsquare APS  5.2 
-\gsquare APS  5.3 \end{itemize}  
-  \end{mdframed} 
+\begin{itemize}
+<<bulletsaps,echo=FALSE,results=tex>>=
+
+aps <- unique(env$tabaps$aps)
+coresbullets = c(verde='\\gsquare',amarelo='\\ysquare',
+                 laranja='\\osquare',vermelho='\\rsquare')
+for (j in 1:10) {
+  nivel = env$tabaps$nivel[env$tabaps$aps == aps[j] & env$tabaps$se==env$data_relatorio]
+  corbullet = '\\wsquare'
+  if(!is.na(nivel)) corbullet = coresbullets[nivel] 
+  cat(paste(corbullet,"APS ",aps[j],'\n'))
+}
+@
+\end{itemize}
+
+\end{mdframed} 
 \end{minipage}
 \newpage
 
@@ -166,10 +217,10 @@ As cores indicam niveis de atenção
   % MAIN BODY - FOURTH PAGE - Situação da dengue na cidade: SÉRIES HISTÓRICAS
 %-----------------------------------------------------------------------------------
   
-  \hypertarget{municipio}{\heading{Situação da Dengue na Cidade do Rio de Janeiro: Séries Históricas}{6pt}} % \hypertarget 
+\hypertarget{municipio}{\heading{Situação da Dengue na Cidade do Rio de Janeiro: Séries Históricas}{6pt}} % \hypertarget 
 
 \vspace{2cm}
-\includegraphics[width=0.8\textwidth]{figs/figcidade.png}
+\includegraphics[width=0.8\textwidth]{\Sexpr{env$figcidade}}
 
 A linha tracejada azul indica o limiar pré-epidêmico; a linha tracejada vermelha indica o limiar de atividade alta (acima do qual é acionado o alerta vermelho). 
 
@@ -185,16 +236,16 @@ A linha tracejada azul indica o limiar pré-epidêmico; a linha tracejada vermel
   \hypertarget{aps}{\heading{Situação nas Áreas Programáticas de Saúde}{6pt}} % \hypertarget 
 
 \vspace{2cm}
-\includegraphics[width=0.8\textwidth]{figs/figaps1.png}
+\includegraphics[width=0.8\textwidth]{\Sexpr{env$figaps1}}
 
 (cont.)
 
 \newpage
 
-\heading{Situação nas Áreas Programáticas de Saúde (cont.)}{6pt}} 
+\heading{Situação nas Áreas Programáticas de Saúde (cont.)}{6pt} 
 
 \vspace{2cm}
-\includegraphics[width=0.8\textwidth]{figs/figaps2.png}
+\includegraphics[width=0.8\textwidth]{\Sexpr{env$figaps2}}
 
 \newpage
 
@@ -202,34 +253,60 @@ A linha tracejada azul indica o limiar pré-epidêmico; a linha tracejada vermel
   % MAIN BODY - SEVENTH PAGE - Situação por APS - tabelas
 %-----------------------------------------------------------------------------------
   
-  \heading{Situação nas Áreas Programáticas de Saúde: Tabelas}{6pt}
+\heading{Situação nas Áreas Programáticas de Saúde: Tabelas}{6pt}
 
-\begin{center}Resumo das últimas quatro semanas epidemiológicas nas Áreas Programáticas de Saúde}\begin{center}\captionof{table}{APS 1.0 }
-\input{figs/tabela1.tex}
-\captionof{table}{APS 2.1 }
-\input{figs/tabela2.tex}
-\captionof{table}{APS 2.2 }
-\input{figs/tabela3.tex}
-\captionof{table}{APS 3.1 }
-\input{figs/tabela4.tex}
-\captionof{table}{APS 3.2 }
-\input{figs/tabela5.tex}\end{center}\small{\hyperlink{vartab}{ver descrição das variáveis}}    (cont.)
+\begin{center}
+Resumo das últimas quatro semanas epidemiológicas nas Áreas Programáticas de Saúde
+
+<<tabelas_saps,echo=FALSE,results=tex>>=
+
+  aps <- unique(env$tabaps$aps)
+  cat(paste('\\captionof{table}{\'APS',aps[1],'\'}\n'))
+  cat(paste('\\input{',env$tabela1,'}\n',sep=''))
+  cat(paste('\\captionof{table}{\'APS',aps[2],'\'}\n'))
+  cat(paste('\\input{',env$tabela2,'}\n',sep=''))
+  cat(paste('\\captionof{table}{\'APS',aps[3],'\'}\n'))
+  cat(paste('\\input{',env$tabela3,'}\n',sep=''))
+  cat(paste('\\captionof{table}{\'APS',aps[4],'\'}\n'))
+  cat(paste('\\input{',env$tabela4,'}\n',sep=''))
+  cat(paste('\\captionof{table}{\'APS',aps[5],'\'}\n'))
+  cat(paste('\\input{',env$tabela5,'}',sep=''))
+
+@
+\end{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}
+
+(cont.)
     
 \newpage
   
-  \heading{Situação nas Áreas Programáticas de Saúde: Tabelas (cont.)}{6pt}
+\heading{Situação nas Áreas Programáticas de Saúde: Tabelas (cont.)}{6pt}
+
+\begin{center}
+Resumo das últimas quatro semanas epidemiológicas
+nas Áreas Programáticas de Saúde
+
   
-\begin{center}{Resumo das últimas quatro semanas epidemiológicas
-nas Áreas Programáticas de Saúde}\begin{center}\captionof{table}{APS 3.3 }
-\input{figs/tabela6.tex}
-\captionof{table}{APS 4.0 }
-\input{figs/tabela7.tex}
-\captionof{table}{APS 5.1 }
-\input{figs/tabela8.tex}
-\captionof{table}{APS 5.2 }
-\input{figs/tabela9.tex}
-\captionof{table}{APS 5.3 }
-\input{figs/tabela10.tex}\end{center}\small{\hyperlink{vartab}{ver descrição das variáveis}}    
+<<tabelas_saps,echo=FALSE,results=tex>>=
+
+  aps <- unique(env$tabaps$aps)
+  cat(paste('\\captionof{table}{\'APS',aps[6],'\'}\n'))
+  cat(paste('\\input{',env$tabela6,'}\n',sep=''))
+  cat(paste('\\captionof{table}{\'APS',aps[7],'\'}\n'))
+  cat(paste('\\input{',env$tabela7,'}\n',sep=''))
+  cat(paste('\\captionof{table}{\'APS',aps[8],'\'}\n'))
+  cat(paste('\\input{',env$tabela8,'}\n',sep=''))
+  cat(paste('\\captionof{table}{\'APS',aps[9],'\'}\n'))
+  cat(paste('\\input{',env$tabela9,'}\n',sep=''))
+  cat(paste('\\captionof{table}{\'APS',aps[10],'\'}\n'))
+  cat(paste('\\input{',env$tabela10,'}',sep=''))
+
+@
+
+
+\end{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}
+    
     %---------------------------------------------------------------------------------
     %	Variáves nas Tabelas, Créditos e Contato
   %---------------------------------------------------------------------------------
@@ -247,7 +324,7 @@ nas Áreas Programáticas de Saúde}\begin{center}\captionof{table}{APS 3.3 }
   \item [ICmin =] número mínimo de casos estimados (IC 95\%)
   \item [ICmax =] número máximo de casos estimados (IC 95\%)
   \item [Rt] número reprodutivo efetivo ($>$ 1 indica aumento de casos transmissão)
-  \item [p(Rt1) =] probabilidade do número reprodutivo ser maior que 1 ($>0.95$ indica aumento significativo de casos)
+  \item [pr(inc. subir) =] probabilidade do número reprodutivo ser maior que 1 ($>0.95$ indica aumento significativo de casos)
   \item [inc =] incidência por 100.000 habitantes
   \item [Nivel =] cor do alerta (verde, amarelo, laranja, vermelho)
   \end{description}
@@ -276,7 +353,7 @@ nas Áreas Programáticas de Saúde}\begin{center}\captionof{table}{APS 3.3 }
   
   \vspace{1cm}
   
-  \hline
+  \hrule
   Para mais detalhes sobre o sistema de alerta InfoDengue, consultar: \url{http://info.dengue.mat.br}\\
   
   \textbf{Contato}: \href{alerta\_dengue@fiocruz.br}{\nolinkurl{alerta\_dengue@fiocruz.br} }
